<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weather_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_padding"
        android:text="@string/text_current_weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_padding"
        android:text="@string/temperature"
        app:layout_constraintEnd_toStartOf="@+id/text_current_temperature"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/text_current_temperature" />

    <TextView
        android:id="@+id/text_current_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_padding"
        android:text="@string/geolocation_not_found"
        android:textSize="@dimen/smal_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_padding"
        android:text="@string/presure"
        app:layout_constraintEnd_toStartOf="@+id/text_current_pressure"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/text_current_pressure" />

    <TextView
        android:id="@+id/text_current_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_padding"
        android:text="@string/geolocation_not_found"
        android:textSize="@dimen/smal_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/text_current_temperature" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_padding"
        android:text="@string/humidity"
        app:layout_constraintEnd_toStartOf="@+id/text_current_humidity"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/text_current_pressure" />


    <TextView
        android:id="@+id/text_current_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:padding="@dimen/medium_padding"
        android:text="@string/geolocation_not_found"
        android:textSize="@dimen/smal_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/text_current_pressure" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_padding"
        android:text="@string/min_temp"
        app:layout_constraintEnd_toStartOf="@+id/text_current_temp_min"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/text_current_humidity" />

    <TextView
        android:id="@+id/text_current_temp_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_padding"
        android:text="@string/geolocation_not_found"
        android:textSize="@dimen/smal_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/text_current_humidity" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_padding"

        android:text="@string/max_temp"
        app:layout_constraintEnd_toStartOf="@+id/text_current_temp_max"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/text_current_temp_min" />

    <TextView
        android:id="@+id/text_current_temp_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:padding="@dimen/medium_padding"
        android:text="@string/geolocation_not_found"
        android:textSize="@dimen/smal_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/text_current_temp_min" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="text_current_temp_max,text_current_temp_min,text_current_humidity,text_current_pressure,text_current_temperature"
        tools:layout_editor_absoluteX="366dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
